--- a/style.css
+++ b/style.css
@@ -21,10 +21,6 @@ html {
 
 /* *Global Styling */
 
-body {
-  min-height: 100vh;
-}
-
 h1,
 h2 {
   font-size: 2.3rem;
@@ -162,6 +158,7 @@ footer {
 @media screen and (min-width: 1340px) {
   .hero {
     padding-top: 0px;
+    min-height: 10vh;
   }
 
   h1,
@@ -182,6 +179,7 @@ footer {
     grid-template-rows: repeat(3, 1fr);
     width: 90%;
     margin: auto;
+    max-height: 70vh;
   }
 
   .supervisor-box {
@@ -206,5 +204,8 @@ footer {
     grid-row: 2/3;
     margin-left: 20px;
     justify-self: start;
+  }
+  footer {
+    padding: 0;
   }
 }
