--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ footer {
     grid-template-rows: repeat(3, 1fr);
     width: 90%;
     margin: auto;
-    max-height: 70vh;
+    min-height: 70vh;
   }
 
   .supervisor-box {
